tests/asm-link/fragment-align-mismatch/rgbasm.err
error: cannot align the section's lower 2 bits to 0
   ╭─[ test.asm:2:18 ]
   │
 2 │ section fragment "aligned", wram0, align[2]
   │                  ────┬────  
   │                      ╰────── the fixed address would have the bits equal to $02 at this point
───╯
1 error generated.
